# raisin_master

./: .gitignore  CMakePresets.json  LICENSE  README.md  configuration_setting.yaml  configuration_setting_example.yaml  install_dependencies.sh  ld_prefix_path.sh  raisin.py  raisin.sh  release.yaml  repositories.yaml  requirements.txt  secrets_example.yaml  setup.sh  setup_vs_env.bat
.github/workflows/: build_test.yaml
cmake/: raisin_helper.cmake  update_build_directories.py
commands/: build.py  constants.py  git_commands.py  globals.py  help.py  index.py  install.py  publish.py  release.py  setup.py  utils.py
script/: .gitignore  build_tools.py  continuous_build.py
templates/: ActionTemplate.hpp  CMakeLists.txt  MessageTemplate.hpp  ServiceTemplate.hpp  install_dependencies.sh  raisin_serialization_base.hpp  vcpkg.json
templates/developer/raisin_empty/: CMakeLists.txt
templates/developer/raisin_empty/config/: params.yaml
templates/developer/raisin_empty/include/raisin_empty/: raisin_empty.hpp
templates/developer/raisin_empty/src/: raisin_empty.cpp
templates/developer/raisin_empty_controller/: CMakeLists.txt
templates/developer/raisin_empty_controller/config/: params.yaml
templates/developer/raisin_empty_controller/include/raisin_empty_controller/: raibo_empty_controller.hpp
templates/developer/raisin_empty_controller/src/raisin_empty_controller/: raibo_empty_controller.cpp
templates/developer/raisin_empty_node/: CMakeLists.txt
templates/developer/raisin_empty_node/include/raisin_empty_node/: raisin_empty_publisher_service.hpp  raisin_empty_subscriber_client.hpp
templates/developer/raisin_empty_node/src/: main_ps.cpp  main_sc.cpp  raisin_empty_publisher_service.cpp  raisin_empty_subscriber_client.cpp
templates/developer/raisin_empty_plugin/: CMakeLists.txt
templates/developer/raisin_empty_plugin/config/: params.yaml
templates/developer/raisin_empty_plugin/include/raisin_empty_plugin/: empty_plugin.hpp
templates/developer/raisin_empty_plugin/src/: empty_plugin.cpp
templates/developer/raisin_empty_process_plugin/: CMakeLists.txt
templates/developer/raisin_empty_process_plugin/config/: params.yaml
templates/developer/raisin_empty_process_plugin/include/raisin_empty_process_plugin/: empty_process_plugin.hpp
templates/developer/raisin_empty_process_plugin/src/: empty_process.cpp  empty_process_listener.cpp  empty_process_plugin.cpp
templates/developer/raisin_gui_empty_window/: .gitignore  CMakeLists.txt  raisin_gui_empty_window.cpp
templates/developer/raisin_gui_empty_window/config/: params.yaml
templates/developer/raisin_gui_empty_window/include/raisin_gui_empty_window/: raisin_gui_empty_window.hpp
